<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-Mission</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="link_to_moves">Link to Moves</string>
    <string name="scheduleSync">Schedule Sync</string>
    <string name="forceSync">Force Sync</string>
    <string name="userName">user@domain.com</string>
    <string name="title_activity_confirm_section">Confirm this trip</string>
    <string name="title_activity_confirm_section_list">Trips to Confirm</string>
    <string name="title_activity_web_login">Login via the web</string>
    <string name="title_activity_result_summary">Result Summary</string>
    <string name="detect_trip_details">We have detected that you took a</string>
    <string name="trip">trip</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="correct_check">correct_check</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="getStarted">Get Started</string>
    <string name="googleSignIn">Sign in with Google</string>
    <string name="no_emails">We will not send you any emails.</string>
    <string name="moves_text">E-Mission integrates with Moves to collect your data.</string>
    <string name="install_moves">Install the Moves app</string>
    <string name="after_install_moves">You are now navigating out of the E-Mission app. After installing and signing in to the Moves app, open the E-Mission app.</string>
    <string name="no_trips">There are no trips to confirm.</string>
    
    <string name="Please_specify">Please specify</string>
    <string name="googleAuthDoneString">Authenticated</string>
    <string name="linkToMovesDoneString">Linked To Moves</string>
    <string name="noGoogleAuthString">Not Authenticated, sign in to continue</string>
    <string name="noLinkToMovesString">Not linked to moves - no data collection on this device </string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_result_summary">Results</string>

    <string-array name="cloud_storage_choices">
        <item>Choose a background storage method</item>
        <item>Azure</item>
        <item>CouchBase</item>
        <item>Our Own Collection</item>
    </string-array>
    
    <string name="map_key">AIzaSyDXdbMQvQHqUcXHsJt11NeKGsPZEsgJrXA</string>
    <string name="menu_item_launch_cordova">Cordova</string>

</resources>
